uodate:bloggs page

--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@
 
         <li>
             <div class="container container-center">
-                <h1>how well do you know me?</h1>
+                <h1>How well do you know me?</h1>
                 <small>November,2020</small>
                 <p> A CLI app built with <strong>nodeJS.</strong>It is like a quiz app of how much you know me!!If you score full well
                 well you are my true friend😁</p>
