--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         Linkedin</a>
         </li>
         </ul>
+        Copyright©   Pratim Hazarika <script >document.write(new Date().getFullYear());</script>
     </footer>
     
     
