--- a/blogg.html
+++ b/blogg.html
@@ -101,5 +101,24 @@
         </li>
 
     </ul>
+    <footer class="footer ">
+        <div class="footer-header">Socail Media Presence</div>
+        <ul class="social-links list">
+           <li class="list-item-inline" >
+               <a class="link" href="https://github.com/Pratim-Kumar-Hazarika">
+          Github</a>
+           </li>
+           <li class="list-item-inline">
+            <a class="link" href="https://www.instagram.com/prratim_">
+         Instgaram</a>
+        </li>
+        <li class="list-item-inline">
+            <a class="link" href="https://www.linkedin.com/in/pratim-hazarika-0ba8251b8/">
+        Linkedin</a>
+        </li>
+        </ul>
+        Copyright©   Pratim Hazarika <script >document.write(new Date().getFullYear());</script>
+    </footer>
+    
 </body>
 </html>
