--- a/blogg.html
+++ b/blogg.html
@@ -21,6 +21,9 @@
             </li>
         </ul>
     </nav>
+    <header class="hero">
+        <img class="hero-img" src="heroo.svg" />
+    </header>
 
    
    
@@ -29,7 +32,7 @@
     <ul class="list-non-bullet">
         <li>
             <div class="container container-center">
-                <h1>Minion Translation App Blog</h1>
+                <h1>4.Minion Translation App Blog</h1>
                 <p>This app is preety awesome.It hardly contains 20 to 30 lines of code but it contains a lot of
                     concepts. The fetch concept plays a important role here. It has querySelectors, clickEvents,
                     and many more. If you want to see the code. You can see it below
@@ -41,7 +44,7 @@
             </div><ul class="list-non-bullet">
         <li>
             <div class="container container-center">
-                <h1>Portfolio Blog</h1>
+                <h1>3.Portfolio Blog</h1>
                 <p>So Learnt to make a cool portfolio. Technologies I have used are 
                     CSS3,HTML5. Thats all yesss Thats all. I have hosted it through
                     netlify and I am availabe for internships just ping me up on my
@@ -60,7 +63,7 @@
 
         <li>
             <div class="container container-center">
-                <h1>Movie Quiz App Blog</h1>
+                <h1>2.Movie Quiz App Blog</h1>
                <p>So yes this is the Movie App. It has some crazy dialouges .But 
                 mostly it containes more of sobs dialouges. So sobs means sad ok. Yeah lol
                 I learnt from a friend of mine and since that day I am using "SOBS". Like it is a
@@ -81,7 +84,7 @@
 
         <li>
             <div class="container container-center">
-                <h1>Quiz App Blog</h1>
+                <h1>1.Quiz App Blog</h1>
                
                 <p> So this app is mostly about how much my friends know me. If anyone
                     scored full . Congrats 😁 you are a true friend. Ok I am very bad in writing
