--- a/projects.html
+++ b/projects.html
@@ -21,6 +21,9 @@
             </li>
         </ul>
     </nav>
+    <header class="hero">
+        <img class="hero-img" src="heroo.svg" />
+    </header>
 
     <header class="hero">
        
@@ -33,7 +36,7 @@
         
         <li>
             <div class="container container-center">
-                <h1>Minion Translation App</h1>
+                <h1>4.Minion Translation App</h1>
                 <small>November,2020</small>
                 <p> This App is basically made with<strong> Html,Css,JavaScript.</strong>It is a super fun app. It converts your text into MINION 
                     language. Try it and share with your friends also.You will have fun </p>
@@ -48,7 +51,7 @@
 
         <li>
             <div class="container container-center">
-                <h1>Portfolio </h1>
+                <h1>3.Portfolio </h1>
                 <small>November,2020</small>
                 <p> Basically made with<strong> Html,Css</strong>The one you are seeing is the Porfolio.
                     </p>
@@ -63,7 +66,7 @@
 
         <li>
             <div class="container container-center">
-                <h1>Movie Quiz App</h1>
+                <h1>2.Movie Quiz App</h1>
                 <small>November,2020</small>
                 <p> A CLI app built with <strong>nodeJS.</strong>It is a super fun MOVIE APP. It contains the dialouges of some
                 famous movies. If you are MOVIE bug just click and play it 😏.</p>
@@ -77,7 +80,7 @@
 
         <li>
             <div class="container container-center">
-                <h1>How well do you know me?</h1>
+                <h1>1.How well do you know me?</h1>
                 <small>November,2020</small>
                 <p> A CLI app built with <strong>nodeJS.</strong>It is like a quiz app of how much you know me!!If you score full well
                 well you are my true friend😁</p>
