--- a/projects.html
+++ b/projects.html
@@ -71,8 +71,8 @@
                 <p> A CLI app built with <strong>nodeJS.</strong>It is a super fun MOVIE APP. It contains the dialouges of some
                 famous movies. If you are MOVIE bug just click and play it 😏.</p>
                 
-                <a class="link primary-link"href="https://github.com/Pratim-Kumar-Hazarika/CLI-App-2-Movie">Live Project</a>
-                <a class="link secondary-link" href="https://github.com/Pratim-Kumar-Hazarika/movie-dialouge-app">View Source Code</a>
+                <a class="link primary-link"href="https://repl.it/@Prratim/movie-dialouge-app?embed=1&output=1">Live Project</a>
+                <a class="link secondary-link" href="https://github.com/Pratim-Kumar-Hazarika/CLI-App-2-Movie">View Source Code</a>
 
             </div>
            
