--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
                 <a class="link link-active"href="/">Home</a>
             </li>
             <li class="list-item-inline">
-                <a class="link"href="/projects.html">Projects</a>
+                <a class="link"href="projects.html">Projects</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/blogs.html">Blogs</a>
+                <a class="link" href="blogs.html">Blogs</a>
             </li>
         </ul>
     </nav>
@@ -43,7 +43,7 @@
             <h1>Projects</h1>
            <p>I like to showcase the projects.Give it a look.
            </p>
-           <a class="link primary-link" href="/projects.html">See Projects</a>
+           <a class="link primary-link" href="projects.html">See Projects</a>
            </div>
     </section>
 
@@ -54,7 +54,7 @@
            <p> I am also starting to write blogs.It will be more of Technical blogs
                but will put up some Non-Technical blogs also.
            </p>
-           <a class="link secondary-link" href="/blogs.html">Read Blogs</a>
+           <a class="link secondary-link" href="blogs.html">Read Blogs</a>
            </div>
     </section>
 
