--- a/projects.html
+++ b/projects.html
@@ -32,6 +32,17 @@
 
 
     <ul class="list-non-bullet">
+        <li>
+            <div class="container container-center">
+                <h1>6.Emoji Interpreter</h1>
+                <small>Dcember,2020</small>
+                <p> This App is basically made with<strong> React</strong>Click on the link to see how it works
+                     </p>
+         </p>
+         <a class="link primary-link"href="https://obsck.csb.app/">Live Project</a>
+         <a class="link secondary-link" href="https://github.com/Pratim-Kumar-Hazarika/Emoji-Interpreter">View Source Code</a>
+     </div>     
+ </li>
 
         <li>
             <div class="container container-center">
