--- a/projects.html
+++ b/projects.html
@@ -32,15 +32,28 @@
 
 
     <ul class="list-non-bullet">
+
+        <li>
+            <div class="container container-center">
+                <h1>7.Food App</h1>
+                <small>Dcember,2020</small>
+                <p> This App is made with<strong> React</strong>.It contains various dishes from around the 🌎!
+                     </p>
+         </p>
+         <a class="link primary-link"href="https://3v4c3.csb.app/">Live Project</a>
+         <a class="link secondary-link" href="https://github.com/Pratim-Kumar-Hazarika/React-Food-App">View Source Code</a>
+     </div>     
+ </li>
+
         <li>
             <div class="container container-center">
                 <h1>6.Emoji Interpreter</h1>
                 <small>Dcember,2020</small>
-                <p> This App is basically made with<strong> React</strong>Click on the link to see how it works
+                <p> This App is basically made with<strong> React</strong>.Click on the link to see how it works!!
                      </p>
          </p>
-         <a class="link primary-link"href="https://obsck.csb.app/">Live Project</a>
-         <a class="link secondary-link" href="https://github.com/Pratim-Kumar-Hazarika/Emoji-Interpreter">View Source Code</a>
+         <a class="link primary-link"href="https://e30x5.csb.app/">Live Project</a>
+         <a class="link secondary-link" href="https://github.com/Pratim-Kumar-Hazarika/React-Emoji-App">View Source Code</a>
      </div>     
  </li>
 
