--- a/blogg.html
+++ b/blogg.html
@@ -41,7 +41,7 @@
                 
             <p>Ever wondered how the world of programming works? If the answer is no you are in the
                 right place. To someone who never coded before, the concept of creating a website
-                may seem really indimidating. But you actually can make anything by learning programming.</p>
+                may seem really intimidating. But you actually can make anything by learning programming.</p>
 
               <p>Anyone can do coding just like anyone can learn a new language.Programming is kind of
                 like speaking a language which the computer will understand. So there are languages
