--- a/blogs.html
+++ b/blogs.html
@@ -31,8 +31,10 @@
        <section class="section ow">
         <li>
             <div class="container container-center">
-                <h1>Lorem ipsum Blog</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit bitant morbi tristique senectus et netus. Elemebitant morbi tristique senectus et netus. Eleme</p>
+                <h1>HTML,CSS,JavaScript Blog!</h1>
+                        <p>Ever wondered how the world of programming works? If the answer is no you are in the
+                            right place.To someone who never coded before, the concept of creating a website
+                            may seem really intimidating. But you actually can make anything by learning programming </p>
                         <small> November, 2020</small>
                 <a class="link primary-link"href="blogg.html">Click Here</a>
             </div>
