update : blog page

--- a/blogs.html
+++ b/blogs.html
@@ -28,7 +28,7 @@
     </header>
 
     <ul class="list-non-bullet">
-       <section class="section ow">
+       <section class="section ">
         <li>
             <div class="container container-center">
                 <h1>HTML,CSS,JavaScript Blog!</h1>
