--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </section>
 
     <footer class="footer ">
-        <div class="footer-header">Socail Media Presence</div>
+        <div class="footer-header">Social Media Presence</div>
         <ul class="social-links list">
            <li class="list-item-inline" >
                <a class="link" href="https://github.com/Pratim-Kumar-Hazarika">
