--- a/projects.html
+++ b/projects.html
@@ -33,8 +33,8 @@
 
     <ul class="list-non-bullet">
 
-        <li>
-            <div class="container container-center">
+        <li >
+            <div class="container container-center ">
                 <h1>7.Food App</h1>
                 <small>Dcember,2020</small>
                 <p> This App is made with<strong> React</strong>.It contains various dishes from around the 🌎!
@@ -129,7 +129,7 @@
 
     </ul>
     <footer class="footer ">
-        <div class="footer-header">Socail Media Presence</div>
+        <div class="footer-header">Social Media Presence</div>
         <ul class="social-links list">
            <li class="list-item-inline" >
                <a class="link" href="https://github.com/Pratim-Kumar-Hazarika">
