--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="container container-center">
             <h1>Technologies</h1>
            <p> I'm famalier with HTML5,CSS3,Git,Javascript,
-               NODEJs,ReactJs and Web Hosting.
+               NODEJs,ReactJs,BootStrap,Jquery and Web Hosting.
            </p>
            </div>
       
