--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
     <section class="section ow">
         <div class="container container-center">
             <h1>Technologies</h1>
-           <p> I'm famalier with HTML5,CSS3,Git,Javascript,
-               NODEJs,ReactJs,BootStrap,Jquery and Web Hosting.
+           <p> I'm famalier with HTML5 ,CSS3 ,Git ,Javascript ,NODEJs ,ReactJs ,BootStrap , Jquery and Web Hosting.
            </p>
            </div>
       
