--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
          Instgaram</a>
         </li>
         <li class="list-item-inline">
-            <a class="link" href="https://www.linkedin.com/in/pratim-hazarika-0ba8251b8/">
+            <a class="link" href="https://www.linkedin.com/in/pratim-hazarika/">
         Linkedin</a>
         </li>
         </ul>
