--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/1007b5dcad.js" crossorigin="anonymous"></script>
     <title>Projects | Pratim</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -128,24 +129,25 @@
         </li>
 
     </ul>
+   
     <footer class="footer ">
         <div class="footer-header">Social Media Presence</div>
         <ul class="social-links list">
            <li class="list-item-inline" >
                <a class="link" href="https://github.com/Pratim-Kumar-Hazarika">
-          Github</a>
+                <i class="fab fa-github "></i></a>
            </li>
            <li class="list-item-inline">
-            <a class="link" href="https://www.instagram.com/prratim_">
-         Instgaram</a>
+            <a class="link" href="https://twitter.com/pratimkumar_">
+                <i class="fab fa-twitter"></i></a>
         </li>
         <li class="list-item-inline">
             <a class="link" href="https://www.linkedin.com/in/pratim-hazarika/">
-        Linkedin</a>
+                <i class="fab fa-linkedin"></i></a>
         </li>
+        
         </ul>
         Copyright©   Pratim Hazarika <script >document.write(new Date().getFullYear());</script>
     </footer>
-    
 </body>
 </html>
