--- a/blogg.html
+++ b/blogg.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav class="navigation container">
-        <di class="nav-brand">IAMDEVELOPER</div>
+        <di class="nav-brand">PratimCodes</div>
         <ul class="list-non-bullet nav-pills" >
             <li class="list-item-inline">
                 <a class="link link-active"href="/">Home</a>
