--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navigation container">
-        <di class="nav-brand">I AM A WEB DEVELOPER</div>
+        <di class="nav-brand">PratimCodes</div>
         <ul class="list-non-bullet nav-pills" >
             <li class="list-item-inline">
                 <a class="link "href="/">Home</a>
@@ -23,7 +23,7 @@
         </ul>
     </nav>
     <header class="hero">
-        <img class="hero-img" src="heroo.svg" />
+        <img class="hero-img" src="projects.svg" />
     </header>
 
     <header class="hero">
