--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         <h1 class="hero-heading"><"Hey I am <span class="hero-inverted">Pratim"/></span></h1>
     </header>
     <div class="container container-center">
-        <p>"A bug is never just a mistake. It represents something bigger. An error of thinking that makes you who you are"   
+        <p class="para">"A bug is never just a mistake. It represents something bigger. An error of thinking that makes you who you are"   
         </p>
     </div>
     
     <section class="section ow">
         <div class="container container-center">
-            <h1 class="h1-tag">Technologies </h1>
+            <h1 class="h1-tag">Technologies 💻  </h1>
             <img  class="img-icons" src="html-5.svg" alt="">
             <img  class="img-icons" src="css.svg" alt="">
             <img  class="img-icons" src="javascript.svg" alt="">
@@ -47,8 +47,8 @@
     
     <section class="section ">
         <div class="container container-center">
-            <h1  class="h1-tag">Projects</h1>
-           <p>I like to showcase the projects.Give it a look.
+            <h1  class="h1-tag">Projects 👨‍💻</h1>
+           <p class="para">Made Projects from the Technologies I have mentioned.Give it a look.
            </p>
            <a class="link primary-link" href="projects.html">See Projects</a>
            </div>
@@ -57,9 +57,8 @@
 
     <section class="section ow">
         <div class="container container-center">
-            <h1  class="h1-tag">Blogs</h1>
-           <p> I am also starting to write blogs.It will be more of Technical blogs
-               but will put up some Non-Technical blogs also.
+            <h1  class="h1-tag">Blogs =📝</h1>
+           <p  class="para"> "Content is ANYTHING that adds value to the READERS LIFE"
            </p>
            <a class="link secondary-link" href="blogs.html">Read Blogs</a>
            </div>
