--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <header class="hero">
         <img class="hero-img" src="image.svg" />
         <h1 class="hero-heading"><"Hey I am <span class="hero-inverted">Pratim"/></span></h1>
+        <h1 class="hero-heading"><span class="hero-inverted">DEVELOPER | STUDENT | LEARNER </span></h1>
     </header>
     <div class="container container-center">
         <p class="para">"A bug is never just a mistake. It represents something bigger. An error of thinking that makes you who you are"   
