--- a/blogg.html
+++ b/blogg.html
@@ -37,7 +37,7 @@
     <ul class="list-non-bullet">
         <li>
             
-            <div class="container container-center">
+            <div class="container container-center blogs-para">
                 
             <p>Ever wondered how the world of programming works? If the answer is no you are in the
                 right place. To someone who never coded before, the concept of creating a website
